TP-3609: fix for user icon overlapping ad

--- a/drupal/sites/all/themes/base/sass/base/modules/_header.scss
+++ b/drupal/sites/all/themes/base/sass/base/modules/_header.scss
@@ -972,7 +972,3 @@ body {
 .header-wrapper.mobile {
   padding: 0 10px;
 }
-
-#block-boxes-ga-homepage-header {
-  margin-bottom: 0;
-}
